# MapMyCells2CL

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  mmc2cl  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: conf.py  index.md
experiments/: explore_approaches.py  ic_exploration.py
scripts/: check-docs.py
src/mapmycells2cl/: __init__.py  annotator.py  cli.py  mapper.py  parser.py
src/mapmycells2cl/data/: mapping.json
tests/: conftest.py
tests/integration/: test_h5ad.py
tests/unit/: test_annotator.py  test_mapper.py  test_parser.py
