[project]
name = "mapmycells2cl"
version = "0.1.0"
description = "Map MapMyCells ABA taxonomy IDs to Cell Ontology (CL) terms"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["cell-ontology", "mapmycells", "allen-brain-atlas", "single-cell"]
dependencies = [
    "click>=8.1",
]

[project.scripts]
mapmycells2cl = "mapmycells2cl.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapmycells2cl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests",
    "integration: tests that hit real external services",
]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src/mapmycells2cl"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []
