[project]
name = "mapmycells2cl"
version = "0.1.0"
description = "Map MapMyCells ABA taxonomy IDs to Cell Ontology (CL) terms"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Cellular Semantics" }]
keywords = ["cell-ontology", "mapmycells", "allen-brain-atlas", "single-cell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.10",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/Cellular-Semantics/MapMyCells2CL"
Repository = "https://github.com/Cellular-Semantics/MapMyCells2CL"
Issues = "https://github.com/Cellular-Semantics/MapMyCells2CL/issues"

[project.scripts]
mapmycells2cl = "mapmycells2cl.cli:cli"
mmc2cl = "mapmycells2cl.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "pandas-stubs>=3.0.0.260204",
    "sphinx>=9.1.0",
    "sphinx-autoapi>=3.8.0",
    "myst-parser>=5.0.0",
    "furo>=2025.12.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapmycells2cl"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests",
    "integration: tests that hit real external services",
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/mapmycells2cl"]

[[tool.mypy.overrides]]
module = ["anndata", "anndata.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []
